...
            title = {
              Text(
                  stringResource(R.string.filter),
                  color = MaterialTheme.colorScheme.onPrimary,
                  modifier = Modifier.testTag("FilterTopBarTitle"))
            },
            modifier = Modifier.testTag("FilterTopBar"),
            navigationIcon = {
              IconButton(
                  onClick = {
                    handleSafeBackNavigation(
                        isModified = isModified,
                        setShowDialog = { showDialog = it },
                        tagsViewModel = tagsViewModel,
                        navigationActions = navigationActions,
                        profilesViewModel = profilesViewModel)
                  },
                  modifier = Modifier.testTag("Back Button")) {
                    Icon(
                        Icons.AutoMirrored.Filled.ArrowBack,
                        contentDescription = "Back",
                        tint = MaterialTheme.colorScheme.onPrimary)
                  }
            },
...

                    Row(
                        modifier = Modifier.fillMaxWidth(),
                        horizontalArrangement = Arrangement.Center,
                        verticalAlignment = Alignment.CenterVertically,
                    ) {
                      GenderButton(
                          label = stringResource(R.string.gender_men),
                          selected = manSelected,
                          onClick = {
                            manSelected = !manSelected
                            isModified = checkModified()
                          },
...
                        onFromFocusChanged = { isAgeFromFocused = it },
                        onToFocusChanged = { isAgeToFocused = it })

                    val tagSelectorHeight = screenHeight * tagSelectorHeightFactor
                    val tagSelectorWidth = screenWidth * tagSelectorWidthFactor

                    RadiusSlider(
                        radius = radius,
                        onDistanceChange = { newRadius ->
                          filterViewModel.setSelectedRadius(newRadius)
                        })
                    Text(
                        "Tags",
                        fontSize = (screenHeight.value * titleFontSizeFactor).sp,
                        modifier =
                            Modifier.padding(vertical = SMALL_PADDING.dp)
                                .testTag("TagsTitle")
                                .semantics(mergeDescendants = true) {})
                    TagSelector(
                        selectedTag =
                            filteringTags.value.map { tag ->
                              Pair(tag, tagsViewModel.tagToColor(tag))
                            },
...
                KeyboardOptions(
                    autoCorrectEnabled = false, keyboardType = KeyboardType.NumberPassword),
            maxLines = 1,
            modifier =
                Modifier.height(IntrinsicSize.Min)
                    .width(textFieldWidth)
                    .testTag("AgeFromTextField")
                    .onFocusChanged {
                      if (!it.isFocused) validateAgeRange()
                      onFromFocusChanged(it.isFocused)
                    },
            label = { Text("From") },
            singleLine = true,
...
                KeyboardOptions(
                    autoCorrectEnabled = false, keyboardType = KeyboardType.NumberPassword),
            maxLines = 1,
            modifier =
                Modifier.height(IntrinsicSize.Min)
                    .width(textFieldWidth)
                    .testTag("AgeToTextField")
                    .onFocusChanged {
                      if (!it.isFocused) validateAgeRange()
                      onToFocusChanged(it.isFocused)
                    },
            label = { Text("To") },
            singleLine = true,
...
  Column(
      modifier = Modifier.fillMaxWidth().padding(vertical = DEFAULT_PADDING.dp),
  ) {
    Text(
        "Search Radius: $radius m",
        fontSize = (screenHeight.value * titleFontSizeFactor).sp,
        modifier = Modifier.padding(vertical = TEXTS_PADDING).testTag("RadiusSliderTitle"))

    Slider(
        value = currentIndex.toFloat(),
        onValueChange = { newValue ->
          val newIndex = newValue.toInt()
          onDistanceChange(ALLOWED_VALUES[newIndex])
...
    Row(
        modifier = Modifier.align(Alignment.Center),
        horizontalArrangement = Arrangement.spacedBy(SMALL_PADDING.dp)) {
          // Reset Button
          Button(
              onClick = onReset,
              modifier = Modifier.width(buttonWidth).height(buttonHeight).testTag("ResetButton"),
              colors =
                  ButtonDefaults.buttonColors(
                      containerColor = MaterialTheme.colorScheme.surfaceVariant,
                      contentColor = MaterialTheme.colorScheme.onSurfaceVariant)) {
                Text(
                    "Reset",
...
              }

          // Filter Button
          Button(
              onClick = onClick,
              enabled = enabled,
              modifier = Modifier.width(buttonWidth).height(buttonHeight).testTag("FilterButton"),
              colors =
                  ButtonDefaults.buttonColors(
                      containerColor = MaterialTheme.colorScheme.primary,
                      contentColor = MaterialTheme.colorScheme.onPrimary,
                      disabledContainerColor =
                          MaterialTheme.colorScheme.primary.copy(
...
